Fix z-index conflict
Between mobile menu and pricing table

--- a/src/components/MobileNavbar/style.sass
+++ b/src/components/MobileNavbar/style.sass
@@ -16,7 +16,7 @@
   height: 61px
   background-color: white
   box-sizing: border-box
-  z-index: 100
+  z-index: 110
   position: fixed
   top: 0
   left: 0
@@ -57,7 +57,7 @@
   transition: all 200ms ease-in-out
   opacity: 0
   overflow: hidden
-  z-index: 99
+  z-index: 109
 
 .MobileNavbar__menu--active
   height: 100%
